[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dash==3.1.0",
    "dash-ag-grid==31.3.1",
    "dash-auth==2.3.0",
    "dash-bootstrap-components==2.0.3",
    "flask==3.0.3",
    "gunicorn==20.0.4",
    "pandas==2.2.3",
    "plotly==6.1.2",
    "werkzeug==3.0.6",
]
